--- a/src/component/Hero/hero.css
+++ b/src/component/Hero/hero.css
@@ -10,9 +10,12 @@
 }
 .right-h{
     flex: 1;
+    position: relative;
+    background-color: #4834d4;
 }
 .the-best-ad{
-    margin-top: 4rem;
+    margin-top: 5rem;
+    margin-bottom: 2.8rem;
     background-color: #363d42;
     border-radius: 4rem;
     width: fit-content;
@@ -29,7 +32,7 @@
 }
 .the-best-ad>div{
     position: absolute;
-    background-color: blue;
+    background-color: #4834d4;
     width: 5.4rem;
     height: 80%;
     left: 8px;
@@ -50,7 +53,6 @@
 .hero-text>div:nth-of-type(3){
     font-size: 1rem;
     font-weight: 200;
-    font-size: 1rem;
     width:80%;
     letter-spacing: 1px;
     text-transform: none;
@@ -67,9 +69,100 @@
     color: white;
     font-size: 2rem;
 }
-.figures>div>span:nth-of-type(2){
-    color: blue;
+.figures>div>span:nth-of-type(2) {
+    color: #4834d4;
     text-transform: uppercase;
     font-size: 1rem;
+}
 
+.hero-Button{
+    display: flex;
+    gap: 2rem;
+    width: 24rem;
+    text-align: center;
+    font-weight: bold;
+
+}
+
+.hero-Button>:nth-child(2){
+    color: white;
+    background-color: transparent;
+    width: 8rem;
+    border: 2px solid white;
+    padding: 1rem;
+    text-decoration-color: white;
+}
+
+
+.right-h>.btns{
+    position: absolute;
+    right:3rem;top: 2rem;color: black;
+    border-radius:5px;
+
+}
+.heart-rate{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    background-color: #464D53;
+    width: fit-content;
+    padding: 1rem;
+    align-items: start;
+    border-radius:5px;
+    position: absolute;
+    right: 4rem;
+    top: 7rem;
+}
+
+.heart-rate>:nth-child(2){
+    color: lightgrey;
+}
+
+.heart-rate>:nth-child(3){
+    color: white;
+    font-size: 1.5rem;
+}
+
+.hero-image{
+    position: absolute;
+    top: 10rem;
+    right: 8rem;
+    width: 23rem;
+}
+
+.hero-image-back{
+    position: absolute;
+    top: 4rem;
+    right: 20rem;
+    z-index: -1;
+    width: 15rem;
+}
+
+.calory{
+    display: flex;
+    gap: 2rem;
+    background-color: #97979d;
+    border-radius: 5px;
+    width: fit-content;
+    position: absolute;
+    top: 30rem;
+    right: 28rem;
+    padding: 1.2rem;
+}
+.calory>img{
+    width: 3rem;
+}
+.calory>div{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.calory>div>:nth-child(1){
+    color: gainsboro;
+
+}
+
+.calory>div>:nth-child(2){
+    color: white;
+    font-size: 1rem;
 }
