--- a/src/component/programs/program.css
+++ b/src/component/programs/program.css
@@ -15,3 +15,40 @@
     text-transform: uppercase;
     font-style: italic;
 }
+.program-category{
+    display: flex;
+    gap: 1rem;
+}
+
+.category{
+    display: flex;
+    flex-direction: column;
+    background-color: gray;
+    padding: 2rem;
+    gap: 1rem;
+    color: white;
+    justify-content: space-between;
+}
+
+.category>:nth-child(1){
+    width: 2rem;
+    height: 2rem;fill:white;
+}
+
+.category>:nth-child(2){
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+.category>:nth-child(3){
+    font-size: 0.9rem;
+    line-height: 25px;
+}
+.Join-Now{
+    display: flex;
+    align-items: center;gap: 2rem;
+}
+.category:hover{
+    background-color:#4834d4 ;
+    cursor:pointer ;
+}
