--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,11 @@
 .btn:hover{
   cursor: pointer;
 }
+
+.blur{
+  background:#4834d4;
+  position: absolute;
+  border-radius: 50%;
+  filter: blur(170px);
+  z-index: -9;
+}
